--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-framework="vue">
   <head>
     <meta charset="utf-8">
-    <title>LeanTodo • Vue.js</title>
+    <title>年会抽奖管理台</title>
     <link rel="stylesheet" href="https://unpkg.com/todomvc-app-css/index.css">
     <style>
       [v-cloak] { display: none; }
